--- a/.github/ISSUE_TEMPLATE/test.yml
+++ b/.github/ISSUE_TEMPLATE/test.yml
@@ -1,8 +1,8 @@
 name: "기능 추가"
 description: "기능 추가 이슈 작성 양식입니다."
 title: "[feat] 기능 설명"
-labels: ""
-assignees: ""
+labels: []
+assignees: []
 
 body:
   - type: markdown
@@ -11,7 +11,7 @@ body:
         작성 예시 : **"[feat] 카드 컴포넌트 만들기"**
 
   - type: input
-    id: 작업 설명
+    id: 작업_설명
     attributes:
       label: 작업 설명
       description: "예제할 기능을 추가하시는 건지 적어주세요."
@@ -20,7 +20,7 @@ body:
       required: true
 
   - type: textarea
-    id: 접근 방법
+    id: 접근_방법
     attributes:
       label: 접근 방법
       description: "고려하신 방법이나, 접근에 대해서 설명해주세요."
