--- a/.github/ISSUE_TEMPLATE/test.yml
+++ b/.github/ISSUE_TEMPLATE/test.yml
@@ -13,7 +13,7 @@ body:
   - type: input
     id: 작업_설명
     attributes:
-      label: 작업 설명
+      label: "작업 설명"
       description: "예제할 기능을 추가하시는 건지 적어주세요."
       placeholder: "설명을 적어주세요."
     validations:
@@ -22,7 +22,7 @@ body:
   - type: textarea
     id: 접근_방법
     attributes:
-      label: 접근 방법
+      label: "접근 방법"
       description: "고려하신 방법이나, 접근에 대해서 설명해주세요."
       placeholder: "설명을 적어주세요."
     validations:
