--- a/.github/ISSUE_TEMPLATE/test.yml
+++ b/.github/ISSUE_TEMPLATE/test.yml
@@ -1,15 +1,15 @@
-name: '기능 추가'
-description: 기능 추가 Issue 작성 양식입니다.
-title: '[feat] '
+name: '♻️ Refactor Template'
+description: 리팩토링에 대한 작업 사항 이슈 템플릿
+title: '♻️ [Refactor] '
 body:
   - type: markdown
     attributes:
       value: |
-        작성 예시 : "[feat] 카드 컴포넌트 만들기"
+        작성 예시 : "[Refactor] 카드 컴포넌트 만들기"
   - type: textarea
     id: bug-description
     attributes:
-      label: 작업 설명
+      label: 🔨 Issue
       description: 어떠한 기능을 추가하시는 건지 적어주세요.
       placeholder: 설명을 적어주세요.
     validations:
@@ -17,8 +17,17 @@ body:
   - type: textarea
     id: reproduction
     attributes:
-      label: 접근 방법
-      description: 고려하신 방법이나, 접근에 대해서 설명해주세요.
-      placeholder: 설명을 적어주세요.
+      label: ✅ To-do
+      description: 진행할 작업에 대해 작성해주세요
+      value: |
+        - [ ] To-do
     validations:
       required: true
+  - type: textarea
+    id: reproduction
+    attributes:
+      label: 📄 Reference
+      description: (선택)참고 자료 및 특이사항을 작성해주세요
+      placeholder: 설명을 적어주세요.
+    validations:
+      required: false
